# dt-chat

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  config.yaml  docker-compose.yml  justfile  pyproject.toml  run_tests.sh  skills-lock.json
apps/bancobot/: CHANGELOG.md  README.md  pyproject.toml
apps/bancobot/src/bancobot/: __init__.py  agent.py  database.py  dependecies.py  models.py  routes.py  services.py
apps/bancobot/tests/: README.md  conftest.py  pytest.ini  run_tests.py  test_agent.py  test_database.py  test_models.py  test_routes.py  test_services.py
apps/bancobot/tests/bancobot/: test_agent.py
apps/classifier/: CHANGELOG.md  README.md  pyproject.toml
apps/classifier/src/classifier/: agent.py  cli.py  database.py  exporter.py  log.py  models.py  service.py  services.py
apps/classifier/tests/: QUICK_START.md  README.md  SUMMARY.md  conftest.py  test_agent.py  test_database.py  test_exporter.py  test_models.py  test_services.py
apps/exporter/: README.md  pyproject.toml
apps/exporter/src/exporter/: __init__.py  cli.py  service.py
apps/exporter/tests/: conftest.py  test_cli.py  test_service.py
apps/fork_engine/: README.md  pyproject.toml
apps/fork_engine/src/fork_engine/: __init__.py  builders.py  config.py  engine.py  helpers.py  main.py  procedure.py
apps/fork_engine/src/fork_engine/twinbots/: __init__.py  adaptive_rag.py  local_model.py  local_triple.py  no_rag.py  single_tool.py  triple_tool.py  two_step.py
apps/fork_engine/src/fork_engine/twinbots/rag/: config.py  state.py  workflow.py
apps/fork_engine/tests/: README.md  conftest.py  test_engine.py  test_helpers.py  test_twinbots.py
apps/userbot/: CHANGELOG.md  README.md  pyproject.toml
apps/userbot/src/userbot/: __init__.py  timing_config.py  user.py
apps/userbot/tests/: run_test.py
apps/visualizer/: CHANGELOG.md  README.md  pyproject.toml
apps/visualizer/src/visualizer/: streamlit_app.py
data/: single-persona.json
data/RAG-Cartoes/Programas de Fidelidade Aéreos/Cartões de Crédito - Outros Produtos Bancários/Cartão Samsung Itaú/: Cartão Samsung Itaú.docx
data/RAG-Cartoes/Programas de Fidelidade Aéreos/Cartões de Crédito - Outros Produtos Bancários/Cartão de Crédito - Geral/: Anuidade e Juros.docx  Bloqueio e Desbloqueio.docx  Cancelamento.docx  Compras Online.docx  Contestação de Compra.docx  Crédito Pessoal.docx  Fatura e pagamento.docx  Limite.docx  Novo Cartão.docx  Parcelar Fatura.docx  Senha.docx  Status do novo cartão.docx
data/RAG-Cartoes/Programas de Fidelidade Aéreos/Cartões de Crédito - Outros Produtos Bancários/Extra Gold/: Extra Gold.docx
data/interacoes_json/: conversa_ana_beatriz_silva_fb6684651b292e3f.json  conversa_carla_mendes_add9791b578462c4.json  conversa_eduardo_martins_02ec39d58cadfd14.json  conversa_mei_li_chen_fc4ab67279b14892.json  conversa_persona_ana_beatriz_silva_01cc0fbaf90cbba5.json  conversa_persona_ana_beatriz_silva_02038b7a45c894a6.json  conversa_persona_ana_beatriz_silva_0287559832855e68.json  conversa_persona_ana_beatriz_silva_0537afe8d18a2d71.json  conversa_persona_ana_beatriz_silva_05e37237192d9039.json  conversa_persona_ana_beatriz_silva_0699d849f35db004.json  conversa_persona_ana_beatriz_silva_0a9712ad6bc0b7fc.json  conversa_persona_ana_beatriz_silva_0ab899d10948a826.json  conversa_persona_ana_beatriz_silva_0c11fb5aa15a97af.json  conversa_persona_ana_beatriz_silva_0cc6a7edea5bf878.json  conversa_persona_ana_beatriz_silva_0de6293315179e16.json  conversa_persona_ana_beatriz_silva_0e18d909cde7cc64.json  conversa_persona_ana_beatriz_silva_14a2e4f9060e7340.json  conversa_persona_ana_beatriz_silva_1809084a91737cfc.json  conversa_persona_ana_beatriz_silva_1862001e08cfad3d.json  conversa_persona_ana_beatriz_silva_199ae6921bc394d3.json  conversa_persona_ana_beatriz_silva_1b81eb26e7438b3f.json  conversa_persona_ana_beatriz_silva_1fc69ca7648241dc.json  conversa_persona_ana_beatriz_silva_2048931de6beabe0.json  conversa_persona_ana_beatriz_silva_25a1c15844f18bf9.json  conversa_persona_ana_beatriz_silva_25bc074b8070fc2f.json  conversa_persona_ana_beatriz_silva_2745d100a127d2a3.json  conversa_persona_ana_beatriz_silva_27a7e909cd404f35.json  conversa_persona_ana_beatriz_silva_28a86f825e5ac8b3.json  conversa_persona_ana_beatriz_silva_28f1a45f1152c117.json  conversa_persona_ana_beatriz_silva_2a71ce37847d2be5.json  conversa_persona_ana_beatriz_silva_2a94af8809fb38c0.json  conversa_persona_ana_beatriz_silva_2d860ee78fc5b986.json  conversa_persona_ana_beatriz_silva_2f1be75dd74dec7d.json  conversa_persona_ana_beatriz_silva_2f3c6161b1193d62.json  conversa_persona_ana_beatriz_silva_30ff7a1a4c51af40.json  conversa_persona_ana_beatriz_silva_324fc4adc55003e7.json  conversa_persona_ana_beatriz_silva_326bb4ae99848c3f.json  conversa_persona_ana_beatriz_silva_339a33fca39d157f.json  conversa_persona_ana_beatriz_silva_351be9dbfcc0e84a.json  conversa_persona_ana_beatriz_silva_357b29b742e5c799.json  (+3961 more)
data/output/: touchpoint-343.csv
data/personas/: personas-3.json  personas-30.json  personas-300.json
data/touchpoints/: Touchpoint_ai.json  Touchpoint_human.json
docs/: USAGE.md  bancobot.md  chatbot.md  classifier.md  exporter.md  fork_engine.md  pubsub.md  scripts.md  timesim.md  userbot.md
libs/chatbot/: README.md  pyproject.toml
libs/chatbot/src/chatbot/: __init__.py  builder.py  core.py
libs/pubsub/: README.md  pyproject.toml
libs/pubsub/src/pubsub/: __init__.py  interfaces.py  redis.py
libs/timesim/: README.md  pyproject.toml
libs/timesim/src/timesim/: __init__.py
libs/userbot/: CHANGELOG.md  README.md  pyproject.toml
libs/userbot/src/userbot/: __init__.py  builder.py  user.py
libs/userbot/tests/: run_test.py
logs/: gemma4.csv
scripts/: embendder.py  ensembler.py  importer.py  injector-by-id.py  injector.py  swarm.py  users_jam.py  userswarm.py
src/bancobot/: __init__.py  agent.py  database.py  models.py  run_bb.py  services.py
src/scripts/: embender.py
test/: conftest.py
test/bancobot/: test_integration.py  test_models.py  test_routes.py  test_services.py
(+20 files in other folders)
