[project]
name = "dtchat"
version = "0.2.0"
description = "Framework for building Digital Twins of conversational agents."
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { "name" = "Caio Bernardo", "email" = "caio.2004vb@gmail.com"}
]
license = "MIT"
dependencies = [
    "python-dotenv>=1.2.1",
]

[tool.uv.workspace]
members = ["apps/*", "scripts/*"]
