[project]
name = "dtchat"
version = "0.2.0"
description = "Framework for building Digital Twins of conversational agents."
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { "name" = "Caio Bernardo", "email" = "me@caiobernardo.top"}
]
license = "MIT"
dependencies = [
    "python-dotenv>=1.2.1",
]

[tool.uv.workspace]
members = [
    "apps/*",
    "scripts/*",
    "libs/*",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
bancobot = "uv run --package bancobot fastapi dev apps/bancobot"
visualizer = "uv run --package visualizer streamlit run apps/visualizer/src/visualizer"
classifier = "uv run --package classifier classifier run data/touchpoints/Touchpoint_ai.json data/touchpoints/Touchpoint_human.json"
classifier-cli = "uv run --package classifier classifier"
