[project]
name = "bancobot"
version = "0.2.0"
description = "Banco Bot is a conversational agent specialized in helping clients from the _fictional_ 'X Bank'. It's used for evaluating the touch-point processing tool and simulation capabilities of this project."
readme = "README.md"
authors = [
    { name = "Caio Bernardo", email = "caio.2004vb@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "chatbot",
    "fastapi[all]>=0.123.9",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "redis>=7.1.0",
    "sqlmodel>=0.0.27",
    "sse-starlette>=3.2.0",
    "timesim",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.12.0",
    "factory-boy>=3.3.3",
    "faker>=38.2.0",
    "freezegun>=1.5.5",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.6",
]

[project.scripts]
bancobot = "bancobot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
chatbot = { workspace = true }
timesim = { workspace = true }
