[project]
name = "bancobot"
version = "0.2.0"
description = "Banco Bot is a conversational agent specialized in helping clients from the _fictional_ 'X Bank'. It's used for evaluating the touch-point processing tool and simulation capabilities of this project."
readme = "README.md"
authors = [
    { name = "Caio Bernardo", email = "me@caiobernardo.top" }
]
requires-python = ">=3.12"

dependencies = [
    "chatbot",
    "fastapi[all]>=0.123.9",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "pubsub",
    "redis>=7.1.0",
    "sqlmodel>=0.0.27",
    "timesim",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[project.scripts]
bancobot = "bancobot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
chatbot = { workspace = true }
timesim = { workspace = true }
pubsub = { workspace = true }
