[project]
name = "classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Caio Bernardo", email = "caiovb@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bancobot",
    "langchain>=1.2.0",
    "langchain-core>=1.2.2",
    "langchain-openai>=1.1.4",
    "redis>=7.1.0",
    "sqlmodel>=0.0.27",
    "typer>=0.19.2",
]

[project.scripts]
classifier = "classifier:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
bancobot = { workspace = true }
