[project]
name = "exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Caio Bernardo", email = "me@caiobernardo.top" }
]
requires-python = ">=3.12"
dependencies = [
    "bancobot",
    "classifier",
    "sqlmodel>=0.0.27",
]

[project.scripts]
exporter = "exporter:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
bancobot = { workspace = true }
classifier = { workspace = true }
