[project]
name = "fork-engine"
version = "0.1.0"
description = "Create Digital Twins of Conversation Agents from a stream of messages"
readme = "README.md"
authors = [
    { name = "Caio Bernardo", email = "caiovb@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bancobot",
    "chatbot",
    "classifier",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.4",
    "pubsub",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "redis>=7.1.0",
    "sqlmodel>=0.0.27",
    "userbot",
]

[project.scripts]
fork-engine = "fork_engine:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
userbot = { workspace = true }
bancobot = { workspace = true }
classifier = { workspace = true }
chatbot = { workspace = true }
pubsub = { workspace = true }
