[project]
name = "userbot"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Caio Bernardo", email = "caiovb@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chatbot",
    "timesim",
]

[project.scripts]
userbot = "userbot:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
chatbot = { workspace = true }
timesim = { workspace = true }
